[tool.poetry]
name = "repl_python3_speak"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
replit = "^3.2.4"
termcolor = "^1.1.0"
cursor = "^1.3.4"
getkey = "^0.6.5"
switch = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
